--- a/app/views/beta-sprint-10/national-admin/recognition-data-1.html
+++ b/app/views/beta-sprint-10/national-admin/recognition-data-1.html
@@ -354,7 +354,7 @@
 
       <div class="rpr-internal-listing__sort-container">
         <div class="rpr-internal-listing__sort-container-left govuk-body">
-          <span class="govuk-!-font-size-36 govuk-!-font-weight-bold">3</span> decision data found.
+          <span class="govuk-!-font-size-36 govuk-!-font-weight-bold">6</span> decision data found.
         </div>
       </div>
 
@@ -399,6 +399,66 @@
             },
             {
               html: '<a class="govuk-link" href="#">View details</a>'
+            }
+          ],
+          [
+            {
+              text: "Chartered Accountant"
+            },
+            {
+              text: "Institute of Chartered Accountants in England and Wales"
+            },
+            {
+              text: "2020"
+            },
+            {
+              text: "16-01-2021"
+            },
+            {
+              text: "Published"
+            },
+            {
+              html: '<a class="govuk-link" href="/beta-sprint-10/regulator-england-and-wales/recognition-decision-data-chartered-accountant-2020">View details</a>'
+            }
+          ],
+          [
+            {
+              text: "Chartered Accountant"
+            },
+            {
+              text: "Institute of Chartered Accountants in Scotland"
+            },
+            {
+              text: "2020"
+            },
+            {
+              text: "17-01-2021"
+            },
+            {
+              text: "Published"
+            },
+            {
+              html: '<a class="govuk-link" href="/beta-sprint-10/regulator-scotland/recognition-decision-data-chartered-accountant-2020">View details</a>'
+            }
+          ],
+          [
+            {
+              text: "Chartered Accountant"
+            },
+            {
+              text: "Institute of Chartered Accountants in England and Wales"
+            },
+            {
+              text: "2019"
+            },
+            {
+              text: "05-01-2020"
+            },
+            {
+              text: "Published"
+            },
+            {
+              html: '<a class="govuk-link" href="/beta-sprint-10/regulator-england-and-wales/recognition-decision-data-chartered-accountant-2019">View details</a>'
             }
           ],
           [
