--- a/app/views/beta-sprint-10/public-facing/profession-chartered-accountant-public.html
+++ b/app/views/beta-sprint-10/public-facing/profession-chartered-accountant-public.html
@@ -470,188 +470,28 @@
         Recognition decision data
       </h2>
 
-      <h2 class="govuk-heading-l">2020</h2>
-      <h3 class="govuk-heading-m">Institute of Chartered Accountants in England and Wales - Route #1</h3>
-      <table class="govuk-table">
-        <thead class="govuk-table__head">
-          <tr class="govuk-table__row">
-            <th scope="col" class="govuk-table__header">Country of qualification</th>
-            <th scope="col" class="govuk-table__header">Yes</th>
-            <th scope="col" class="govuk-table__header">Yes (after compensatory measure)</th>
-            <th scope="col" class="govuk-table__header">No</th>
-            <th scope="col" class="govuk-table__header">No (after compensatory measure)</th>
-          </tr>
-        </thead>
-        <tbody class="govuk-table__body">
-          <tr class="govuk-table__row">
-            <td class="govuk-table__cell">France</td>
-            <td class="govuk-table__cell">3</td>
-            <td class="govuk-table__cell">1</td>
-            <td class="govuk-table__cell">0</td>
-            <td class="govuk-table__cell">0</td>
-          </tr>
-          <tr class="govuk-table__row">
-            <td class="govuk-table__cell">Italy</td>
-            <td class="govuk-table__cell">3</td>
-            <td class="govuk-table__cell">0</td>
-            <td class="govuk-table__cell">1</td>
-            <td class="govuk-table__cell">0</td>
-          </tr>
-          <tr class="govuk-table__row">
-            <td class="govuk-table__cell">Australia</td>
-            <td class="govuk-table__cell">0</td>
-            <td class="govuk-table__cell">1</td>
-            <td class="govuk-table__cell">0</td>
-            <td class="govuk-table__cell">0</td>
-          </tr>
-        </tbody>
-      </table>
+      {{ govukSummaryList({
+        classes: 'govuk-summary-list--no-border',
+        rows: [
+          {
+            key: {
+              text: "Year"
+            },
+            value: {
+              html: '<a class="govuk-link" href="recognition-decision-data-chartered-accountant-v2-2020">2020</a>'
+            }
+          },
+          {
+            key: {
+              text: "Year"
+            },
+            value: {
+              html: '<a class="govuk-link" href="recognition-decision-data-chartered-accountant-v2-2019">2019</a>'
+            }
+          }
+        ]
+      }) }}
 
-      <h3 class="govuk-heading-m">Institute of Chartered Accountants in England and Wales - Route #2</h3>
-      <table class="govuk-table">
-        <thead class="govuk-table__head">
-          <tr class="govuk-table__row">
-            <th scope="col" class="govuk-table__header">Country of qualification</th>
-            <th scope="col" class="govuk-table__header">Yes</th>
-            <th scope="col" class="govuk-table__header">Yes (after compensatory measure)</th>
-            <th scope="col" class="govuk-table__header">No</th>
-            <th scope="col" class="govuk-table__header">No (after compensatory measure)</th>
-          </tr>
-        </thead>
-        <tbody class="govuk-table__body">
-          <tr class="govuk-table__row">
-            <td class="govuk-table__cell">France</td>
-            <td class="govuk-table__cell">3</td>
-            <td class="govuk-table__cell">1</td>
-            <td class="govuk-table__cell">0</td>
-            <td class="govuk-table__cell">0</td>
-          </tr>
-          <tr class="govuk-table__row">
-            <td class="govuk-table__cell">Italy</td>
-            <td class="govuk-table__cell">3</td>
-            <td class="govuk-table__cell">0</td>
-            <td class="govuk-table__cell">1</td>
-            <td class="govuk-table__cell">0</td>
-          </tr>
-          <tr class="govuk-table__row">
-            <td class="govuk-table__cell">Australia</td>
-            <td class="govuk-table__cell">0</td>
-            <td class="govuk-table__cell">1</td>
-            <td class="govuk-table__cell">0</td>
-            <td class="govuk-table__cell">0</td>
-          </tr>
-        </tbody>
-      </table>
-
-      <h3 class="govuk-heading-m">Institute of Chartered Accountants in Scotland - Route #1</h3>
-      <table class="govuk-table">
-        <thead class="govuk-table__head">
-          <tr class="govuk-table__row">
-            <th scope="col" class="govuk-table__header">Country of qualification</th>
-            <th scope="col" class="govuk-table__header">Yes</th>
-            <th scope="col" class="govuk-table__header">Yes (after compensatory measure)</th>
-            <th scope="col" class="govuk-table__header">No</th>
-            <th scope="col" class="govuk-table__header">No (after compensatory measure)</th>
-          </tr>
-        </thead>
-        <tbody class="govuk-table__body">
-          <tr class="govuk-table__row">
-            <td class="govuk-table__cell">France</td>
-            <td class="govuk-table__cell">3</td>
-            <td class="govuk-table__cell">1</td>
-            <td class="govuk-table__cell">0</td>
-            <td class="govuk-table__cell">0</td>
-          </tr>
-          <tr class="govuk-table__row">
-            <td class="govuk-table__cell">Italy</td>
-            <td class="govuk-table__cell">3</td>
-            <td class="govuk-table__cell">0</td>
-            <td class="govuk-table__cell">1</td>
-            <td class="govuk-table__cell">0</td>
-          </tr>
-          <tr class="govuk-table__row">
-            <td class="govuk-table__cell">Australia</td>
-            <td class="govuk-table__cell">0</td>
-            <td class="govuk-table__cell">1</td>
-            <td class="govuk-table__cell">0</td>
-            <td class="govuk-table__cell">0</td>
-          </tr>
-        </tbody>
-      </table>
-
-      <h2 class="govuk-heading-l">2019</h2>
-      
-      <h3 class="govuk-heading-m">Institute of Chartered Accountants in England and Wales - Route #1</h3>
-      <table class="govuk-table">
-        <thead class="govuk-table__head">
-          <tr class="govuk-table__row">
-            <th scope="col" class="govuk-table__header">Country of qualification</th>
-            <th scope="col" class="govuk-table__header">Yes</th>
-            <th scope="col" class="govuk-table__header">Yes (after compensatory measure)</th>
-            <th scope="col" class="govuk-table__header">No</th>
-            <th scope="col" class="govuk-table__header">No (after compensatory measure)</th>
-          </tr>
-        </thead>
-        <tbody class="govuk-table__body">
-          <tr class="govuk-table__row">
-            <td class="govuk-table__cell">France</td>
-            <td class="govuk-table__cell">3</td>
-            <td class="govuk-table__cell">1</td>
-            <td class="govuk-table__cell">0</td>
-            <td class="govuk-table__cell">0</td>
-          </tr>
-          <tr class="govuk-table__row">
-            <td class="govuk-table__cell">Italy</td>
-            <td class="govuk-table__cell">3</td>
-            <td class="govuk-table__cell">0</td>
-            <td class="govuk-table__cell">1</td>
-            <td class="govuk-table__cell">0</td>
-          </tr>
-          <tr class="govuk-table__row">
-            <td class="govuk-table__cell">Australia</td>
-            <td class="govuk-table__cell">0</td>
-            <td class="govuk-table__cell">1</td>
-            <td class="govuk-table__cell">0</td>
-            <td class="govuk-table__cell">0</td>
-          </tr>
-        </tbody>
-      </table>
-
-      <h3 class="govuk-heading-m">Institute of Chartered Accountants in England and Wales - Route #2</h3>
-      <table class="govuk-table">
-        <thead class="govuk-table__head">
-          <tr class="govuk-table__row">
-            <th scope="col" class="govuk-table__header">Country of qualification</th>
-            <th scope="col" class="govuk-table__header">Yes</th>
-            <th scope="col" class="govuk-table__header">Yes (after compensatory measure)</th>
-            <th scope="col" class="govuk-table__header">No</th>
-            <th scope="col" class="govuk-table__header">No (after compensatory measure)</th>
-          </tr>
-        </thead>
-        <tbody class="govuk-table__body">
-          <tr class="govuk-table__row">
-            <td class="govuk-table__cell">France</td>
-            <td class="govuk-table__cell">3</td>
-            <td class="govuk-table__cell">1</td>
-            <td class="govuk-table__cell">0</td>
-            <td class="govuk-table__cell">0</td>
-          </tr>
-          <tr class="govuk-table__row">
-            <td class="govuk-table__cell">Italy</td>
-            <td class="govuk-table__cell">3</td>
-            <td class="govuk-table__cell">0</td>
-            <td class="govuk-table__cell">1</td>
-            <td class="govuk-table__cell">0</td>
-          </tr>
-          <tr class="govuk-table__row">
-            <td class="govuk-table__cell">Australia</td>
-            <td class="govuk-table__cell">0</td>
-            <td class="govuk-table__cell">1</td>
-            <td class="govuk-table__cell">0</td>
-            <td class="govuk-table__cell">0</td>
-          </tr>
-        </tbody>
-      </table>
 
     </div>
 
