--- a/app/views/beta-sprint-10/regulator-england-and-wales/recognition-data-1.html
+++ b/app/views/beta-sprint-10/regulator-england-and-wales/recognition-data-1.html
@@ -354,7 +354,7 @@
 
       <div class="rpr-internal-listing__sort-container">
         <div class="rpr-internal-listing__sort-container-left govuk-body">
-          <span class="govuk-!-font-size-36 govuk-!-font-weight-bold">0</span> decision data found.
+          <span class="govuk-!-font-size-36 govuk-!-font-weight-bold">2</span> decision data found.
         </div>
       </div>
 
@@ -376,6 +376,42 @@
           {
             text: "Actions"
           }
+        ],
+        rows: [
+          [
+            {
+              text: "Chartered Accountant"
+            },
+            {
+              text: "2020"
+            },
+            {
+              text: "16-01-2021"
+            },
+            {
+              text: "Published"
+            },
+            {
+              html: '<a class="govuk-link" href="/beta-sprint-10/regulator-england-and-wales/recognition-decision-data-chartered-accountant-2020">View details</a>'
+            }
+          ],
+          [
+            {
+              text: "Chartered Accountant"
+            },
+            {
+              text: "2019"
+            },
+            {
+              text: "05-01-2020"
+            },
+            {
+              text: "Published"
+            },
+            {
+              html: '<a class="govuk-link" href="/beta-sprint-10/regulator-england-and-wales/recognition-decision-data-chartered-accountant-2019">View details</a>'
+            }
+          ]
         ]
       }) }}
     </div>
