--- a/app/views/beta-sprint-10/regulator-scotland/profession-chartered-accountant.html
+++ b/app/views/beta-sprint-10/regulator-scotland/profession-chartered-accountant.html
@@ -500,6 +500,29 @@
         }) }}
       </div>
 
+
+
+      <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+
+      <h2 class="govuk-heading-m rpr-details__section-title">
+        Recognition decision data
+      </h2>
+
+      {{ govukSummaryList({
+        classes: 'govuk-summary-list--no-border',
+        rows: [
+          {
+            key: {
+              text: "Year"
+            },
+            value: {
+              html: '<a class="govuk-link" href="recognition-decision-data-chartered-accountant-2020">2020</a>'
+            }
+          }
+        ]
+      }) }}
+
+
     </div>
 
     <div class="govuk-grid-column-one-third">
@@ -524,7 +547,7 @@
 
         <h2 class="govuk-heading-s">
           Currently published version<br>
-          <span class="govuk-body"><a href="#" class="govuk-link">Public facing link</a></span>
+          <span class="govuk-body"><a href="/beta-sprint-10/public-facing/profession-chartered-accountant-public" class="govuk-link">Public facing link</a></span>
         </h2>
         
         <nav role="navigation" aria-labelledby="subsection-title">
